--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     },
     "scripts": {
         "start": "npm run build && NODE_ENV=development webpack --watch",
-        "build": "NODE_ENV=production webpack --config webpack.config.js"
+        "build": "rimraf static/images/* && NODE_ENV=production webpack --config webpack.config.js"
     },
     "author": "",
     "license": "ISC",
